--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           # auto set by GitHub, details in
           # https://docs.github.com/en/actions/security-guides/automatic-token-authentication
-          GH_TOKEN: ${{ secrets.TOKEN_GIT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           WHITELIST: ${{ secrets.WHITELIST }}
           CONFIG: ${{ vars.CONFIG }}
