--- a/preview-ui/package.json
+++ b/preview-ui/package.json
@@ -70,5 +70,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
+  },
+  "resolutions": {
+    "prop-types": "^15.8.1"
   }
 }
